--- a/ballonslib/Cargo.toml
+++ b/ballonslib/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ballons"
+name = "ballonslib"
 version = "0.1.0"
 authors = ["clemkeirua <clement@keiruaprod.fr>"]
 edition = "2018"
@@ -7,5 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-structopt = "0.3.20"
-ballonslib = { path = "ballonslib" }
+rand = "0.7.3"
