--- a/ballonslib/Cargo.toml
+++ b/ballonslib/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["clemkeirua <clement@keiruaprod.fr>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+crate-type = ["cdylib"]
 
 [dependencies]
 rand = "0.7.3"
+libc = "*"
